[package]
name = "FastORM"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
descrpiton = "ORM based on sqlx"
homepage = "https://github.com/thegenius/FastORM"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
common-trait = { path = "./common-trait", version = "*" }
derive-macro = { path = "./derive-macro", version = "*" }

async-trait = {version = "0.1.74"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9.27"
sqlx = {version = "0.7.2", features = ["runtime-tokio", "sqlite", "macros", "any"]}

tokio = {verison = "1.34.0", features = ["full"]}
path-absolutize = "3.1.1"

[workspace]
members = ["common-trait", "derive-macro"]
