[package]
name = "common-trait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "sqlite", "mysql", "macros", "any"] }
async-trait = "0.1.74"
serde = { version = "1.0", features = ["derive"] }
