[package]
name = "derive-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"

common-trait = { path = "../common-trait" }
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "sqlite", "mysql", "macros", "any"] }